src/objects/TMN_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Active_Date__c</fullName>
        <description>This field is used for the Mentor record type.</description>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for the Mentor record type.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR( TODAY() ) - YEAR( Date_of_Birth__c )</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chessie_ID__c</fullName>
        <label>Chessie ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disregarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disregarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>if(ISNULL(Middle_Initial__c ),
First_Name__c &amp; &quot; &quot; &amp;  Last_Name__c,
First_Name__c &amp; &quot; &quot; &amp;   Middle_Initial__c &amp; &quot; &quot; &amp; Last_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hold_Date__c</fullName>
        <description>This field is used for the Mentor record type.</description>
        <label>Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for the Mentor record type.</description>
        <label>Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Id__c</fullName>
        <formula>IF(CONTAINS(RecordType.Name, &apos;Mentor&apos;), Id, IF(CONTAINS(RecordType.Name, &apos;Household Member&apos;), Mentor__c, null))</formula>
        <label>Household Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date__c</fullName>
        <description>This field is used for the Mentor record type.</description>
        <label>In Progress Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for the Mentor record type.</description>
        <label>In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <description>This field is used for the Mentor record type.</description>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for the Mentor record type.</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <referenceTo>TMN_Contact__c</referenceTo>
        <relationshipLabel>Related Parties</relationshipLabel>
        <relationshipName>Related_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Recertification_Date__c</fullName>
        <label>Most Recent Recertification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <picklist>
            <picklistValues>
                <fullName>Caucasian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Indian/Alaskan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian/Pacific Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Racial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Party_Type__c</fullName>
        <label>Related Party Type</label>
        <picklist>
            <picklistValues>
                <fullName>Co-Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent&apos;s Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent&apos;s Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident-Non Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <label>Relationship Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmarried Couple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>This field centralizes the Role for Mentors and their Household Members.</description>
        <formula>IF( CONTAINS(RecordType.Name, &apos;Mentor&apos;) , &apos;Mentor&apos;, IF ( CONTAINS(RecordType.Name, &apos;Related Party&apos;),  TEXT( Related_Party_Type__c ) , &apos;&apos; ) )</formula>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspend_Date__c</fullName>
        <description>This field is used for the Mentor record type.</description>
        <label>Suspend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for the Mentor record type.</description>
        <label>Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>TMN Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Full_Name__c</columns>
        <columns>Role__c</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>Age__c</columns>
        <columns>Primary_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TMN-CNT-{0000}</displayFormat>
        <label>TMN Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMN Contacts</pluralLabel>
    <recordTypes>
        <fullName>Household_Member</fullName>
        <active>true</active>
        <description>A Household Member of a Mentor</description>
        <label>Household Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mentor</fullName>
        <active>true</active>
        <label>Mentor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Related_Party</fullName>
        <active>true</active>
        <description>A Related Party to a Mentor</description>
        <label>Related Party</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Email_Required_for_Co_Applicant</fullName>
        <active>true</active>
        <description>Household members with the Related Party Type Co-Applicant need to have email addresses associated.</description>
        <errorConditionFormula>AND( ISPICKVAL( Related_Party_Type__c , &apos;Co-Applicant&apos; ), ISBLANK( Email__c ) )</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Email required for Co-Applicant</errorMessage>
    </validationRules>
</CustomObject>